<resources>
    <string name="app_name">CarSharingApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Car Sharing App</string>
    <string name="nav_header_user_name">%1s</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_rides">Rides</string>
    <string name="menu_credit_cards">Credit Cards</string>


    <string name="login_title">Login</string>
    <string name="login_btn">Login</string>
    <string name="create_new_account_hint">Don\'t have an account? Create one here</string>
    <string name="login_password_hint">Password</string>
    <string name="login_email_hint">Email</string>
    <string name="register_name_hint">Name</string>
    <string name="phone_hint">Phone</string>
    <string name="register_btn">Register</string>
    <string name="register_title">Register a new account!</string>
    <string name="cb_register_text">Agree with our </string>
    <string name="terms_and_conditions"> terms and conditions</string>
    <string name="user_insert_error_msg">The user couldn\'t be registred</string>
    <string name="user_insert_success_msg">User registred with success!</string>
    <string name="terms_and_conditions_msg">
These terms and conditions outline the rules and regulations for the use of CarSharing App\'s Website, located at http://carSharing.1094.project.org.

By accessing this website we assume you accept these terms and conditions. Do not continue to use CarSharing if you do not agree to take all of the terms and conditions stated on this page.

The following terminology applies to these Terms and Conditions, Privacy Statement and Disclaimer Notice and all Agreements: "Client", "You" and "Your" refers to you, the person log on this website and compliant to the Company’s terms and conditions. "The Company", "Ourselves", "We", "Our" and "Us", refers to our Company. "Party", "Parties", or "Us", refers to both the Client and ourselves. All terms refer to the offer, acceptance and consideration of payment necessary to undertake the process of our assistance to the Client in the most appropriate manner for the express purpose of meeting the Client’s needs in respect of provision of the Company’s stated services, in accordance with and subject to, prevailing law of Netherlands. Any use of the above terminology or other words in the singular, plural, capitalization and/or he/she or they, are taken as interchangeable and therefore as referring to same.
Cookies

We employ the use of cookies. By accessing CarSharing, you agreed to use cookies in agreement with the CarSharing App\'s Privacy Policy.

Most interactive websites use cookies to let us retrieve the user’s details for each visit. Cookies are used by our website to enable the functionality of certain areas to make it easier for people visiting our website. Some of our affiliate/advertising partners may also use cookies.
License

Unless otherwise stated, CarSharing App and/or its licensors own the intellectual property rights for all material on CarSharing. All intellectual property rights are reserved. You may access this from CarSharing for your own personal use subjected to restrictions set in these terms and conditions.

You must not:

    Republish material from CarSharing
    Sell, rent or sub-license material from CarSharing
    Reproduce, duplicate or copy material from CarSharing
    Redistribute content from CarSharing

This Agreement shall begin on the date hereof. Our Terms and Conditions were created with the help of the Terms And Conditions Generator and the Privacy Policy Generator.

Parts of this website offer an opportunity for users to post and exchange opinions and information in certain areas of the website. CarSharing App does not filter, edit, publish or review Comments prior to their presence on the website. Comments do not reflect the views and opinions of CarSharing App,its agents and/or affiliates. Comments reflect the views and opinions of the person who post their views and opinions. To the extent permitted by applicable laws, CarSharing App shall not be liable for the Comments or for any liability, damages or expenses caused and/or suffered as a result of any use of and/or posting of and/or appearance of the Comments on this website.

CarSharing App reserves the right to monitor all Comments and to remove any Comments which can be considered inappropriate, offensive or causes breach of these Terms and Conditions.

You warrant and represent that:

    You are entitled to post the Comments on our website and have all necessary licenses and consents to do so;
    The Comments do not invade any intellectual property right, including without limitation copyright, patent or trademark of any third party;
    The Comments do not contain any defamatory, libelous, offensive, indecent or otherwise unlawful material which is an invasion of privacy
    The Comments will not be used to solicit or promote business or custom or present commercial activities or unlawful activity.
    </string>
    <string name="enter_credentials_msg">Please enter credentials!</string>
    <string name="not_a_valid_email_msg">Enter a valid email</string>
    <string name="add_card_button_desc">Add card button</string>
    <string name="add_credit_card_title">Add a new credit card!</string>
    <string name="add_credit_card_cardholder_name_hint">Cardholder Name</string>
    <string name="add_credit_card_number_hint">Card Number</string>
    <string name="add_credit_card_expiration_hint">Expiration(MM/YY)</string>
    <string name="save">Save</string>
    <string name="add_credit_card_cvv_hint">CVV</string>
    <string name="type">type</string>
    <string name="placeholder_card_number">2365 4587 8965 1254</string>
    <string name="lvi_credit_card_number_format">%1$s %2$s %3$s %4$s</string>
    <string name="lvi_credit_card_expiration_label">Expire date</string>
    <string name="cardholder">Cardholder: %1$s </string>
    <string name="empty_value">-</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="logout">Logout</string>
    <string name="edit_card_title">Edit Card!</string>
    <string name="profile_page">Profile Page</string>
    <string name="profile_page_edit">Update Profile</string>
    <string name="edit_profile">edit</string>
    <string name="rate_our_app">Rate our app</string>
    <string name="delete_account">Delete Account</string>
    <string name="export_data">Export Data</string>
    <string name="delete_account_message">Are you sure you want to delete your account?</string>
    <string name="cancel">Cancel</string>
    <string name="tv_title_home">Select your Ride</string>
    <string name="car">Car</string>
    <string name="from_date">From Date:</string>
    <string name="to_date">To Date:</string>
    <string name="ride_pick_up_location">Ride pick-up location:</string>
    <string name="tap_to_select">Tap to select</string>
    <string name="get_a_new_ride">Get a new ride</string>
    <string name="credit_card">Credit Card</string>

    <string name="from">From</string>
    <string name="untill">Until</string>

    <string name="expected_km">Expected Km</string>
    <string name="nav_map">Map</string>
    <string name="signature">Signature</string>
    <string name="export_your_data">Export your data</string>
    <string name="txt">.txt</string>
    <string name="csv">.csv</string>
    <string name="pick_desired_export_type">Pick desired export type!</string>

</resources>