<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_rides"
            android:icon="@drawable/ic_baseline_directions_car_24"
            android:title="@string/menu_rides" />
        <item
            android:id="@+id/nav_credit_cards"
            android:icon="@drawable/ic_baseline_credit_card_24"
            android:title="@string/menu_credit_cards" />
        <item android:id="@+id/nav_logout"
            android:title="@string/logout"
            android:icon="@drawable/ic_baseline_login_24" />
    </group>
</menu>