<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_export_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/export_your_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="20sp"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/tv_export_type_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick_desired_export_type"
        app:layout_constraintTop_toBottomOf="@id/tv_export_title"
        app:layout_constraintBottom_toTopOf="@id/rg_export_type"
        app:layout_constraintStart_toStartOf="@id/rg_export_type"
        android:layout_marginTop="20dp"
        android:textSize="15dp"
        />
    <RadioGroup
        android:id="@+id/rg_export_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toBottomOf="@id/tv_export_type_hint">
        <RadioButton
            android:id="@+id/rb_export_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt"/>
        <RadioButton
            android:id="@+id/rb_export_csv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/csv"/>
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>