<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/credit_card_bg"
    android:clickable="true"
    android:focusable="true">

    <TextView
        android:id="@+id/tv_lvi_credit_card_cardholder_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/cardholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_lvi_credit_card_number"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:textSize="17dp"
        />

    <TextView
        android:id="@+id/tv_lvi_credit_card_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_card_number"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_lvi_credit_card_cardholder_name"

        />

    <TextView
        android:id="@+id/tv_lvi_credit_card_expiration_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/lvi_credit_card_expiration_label"
        app:layout_constraintTop_toBottomOf="@id/tv_lvi_credit_card_number"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/tv_lvi_credit_card_expiration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="10/20"
        app:layout_constraintStart_toStartOf="@id/tv_lvi_credit_card_expiration_label"
        app:layout_constraintTop_toBottomOf="@id/tv_lvi_credit_card_expiration_label"
        app:layout_constraintEnd_toEndOf="@id/tv_lvi_credit_card_expiration_label"
        android:textSize="18dp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/tv_lvi_credit_card_cvv_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/add_credit_card_cvv_hint"
        app:layout_constraintTop_toBottomOf="@id/tv_lvi_credit_card_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/tv_lvi_credit_card_cvv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="331"
        app:layout_constraintStart_toStartOf="@id/tv_lvi_credit_card_cvv_label"
        app:layout_constraintTop_toBottomOf="@id/tv_lvi_credit_card_cvv_label"
        app:layout_constraintEnd_toEndOf="@id/tv_lvi_credit_card_cvv_label"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="10dp"
        android:textSize="18dp"
        android:textStyle="italic"/>

    <ImageView
        android:id="@+id/iv_lvi_credit_card_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/type"
        android:src="@drawable/ic_visa"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toEndOf="@+id/tv_lvi_credit_card_cvv_label"
        app:layout_constraintTop_toBottomOf="@id/tv_lvi_credit_card_number" />



</androidx.constraintlayout.widget.ConstraintLayout>