<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_gv_ride">

    <ImageView
        android:id="@+id/iv_gvi_ride"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_red_car"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        />

    <TextView
        android:id="@+id/tv_gvi_ride_from_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_gvi_ride"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginStart="40dp"/>

    <TextView
        android:id="@+id/tv_gvi_ride_from_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/tv_gvi_ride_from_hint"
        app:layout_constraintTop_toBottomOf="@id/tv_gvi_ride_from_hint"
        app:layout_constraintEnd_toEndOf="@id/tv_gvi_ride_from_hint"
        android:textSize="20sp"
        android:textColor="@color/black"/>


    <TextView
        android:id="@+id/tv_gvi_ride_until_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/untill"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_gvi_ride"
        android:textSize="20sp"
        android:layout_marginEnd="40dp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/tv_gvi_ride_until_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/tv_gvi_ride_until_hint"
        app:layout_constraintTop_toBottomOf="@id/tv_gvi_ride_until_hint"
        app:layout_constraintEnd_toEndOf="@id/tv_gvi_ride_until_hint"
        android:textSize="20sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/tv_gvi_ride_car"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_gvi_ride_from_date"
        android:text="@string/car"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="20sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/tv_gvi_ride_card_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_gvi_ride_car"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_gvi_ride_location_hint"
        android:text="@string/credit_card"
        android:textSize="20sp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/tv_gvi_ride_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/tv_gvi_ride_card_hint"
        app:layout_constraintStart_toEndOf="@id/tv_gvi_ride_card_hint"
        app:layout_constraintBottom_toBottomOf="@id/tv_gvi_ride_card_hint"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="20sp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/tv_gvi_ride_location_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_gvi_ride_card_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_gvi_ride_km_hint"
        android:text="@string/ride_pick_up_location"
        android:textSize="20sp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/tv_gvi_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/tv_gvi_ride_location_hint"
        app:layout_constraintStart_toEndOf="@id/tv_gvi_ride_location_hint"
        app:layout_constraintBottom_toBottomOf="@id/tv_gvi_ride_location_hint"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="20sp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:textColor="@color/black"/>



    <TextView
        android:id="@+id/tv_gvi_ride_km_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_gvi_ride_location_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/expected_km"
        android:textSize="20sp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/tv_gvi_km"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/tv_gvi_ride_km_hint"
        app:layout_constraintStart_toEndOf="@id/tv_gvi_ride_km_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/tv_gvi_ride_km_hint"
        android:textSize="20sp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:textColor="@color/black"/>


</androidx.constraintlayout.widget.ConstraintLayout>